v2/api-reference/endpoints/crawl/list-crawl-executions.mdx
---
title: "List Crawls"
api: "GET https://api.getcatalog.ai/v2/crawl"
description: "List all crawls with status. Shows all crawl jobs, their current status, and when they were created."
---

<Tip>
**When to use:** Monitor all your crawl operations in one place. Use this endpoint to:
- See all crawl executions you've started
- Filter by status (processing, completed, failed)
- Track when crawls were initiated
- Find execution IDs for status checks
</Tip>

## Request

<ParamField header="x-api-key" type="string" required>
  Your API key for authentication
</ParamField>

### Query Parameters

<ParamField query="status" type="string" optional>
  Filter executions by status. Possible values: `"processing"`, `"completed"`, `"failed"`
  
  **Note:** If not provided, all executions are returned regardless of status.
</ParamField>

<ParamField query="page_size" type="number" optional>
  Number of executions to return per page (default: 20)
  
  **Note:** Executions are returned in reverse chronological order (most recent first).
</ParamField>

## Response

<ResponseField name="data" type="array">
  Array of execution summary objects
  
  <Expandable title="Execution Summary">
    <ResponseField name="execution_id" type="string">
      Unique execution identifier. Use this ID with [`GET /v2/crawl/{execution_id}`](/v2/api-reference/endpoints/crawl/get-crawl-status) to check detailed status and results.
      
      **Format:** `crawl-{hostname}-{uuid}`
    </ResponseField>
    
    <ResponseField name="status" type="string">
      Current execution status
      
      **Possible values:**
      - `"processing"` - Execution is currently running
      - `"completed"` - Execution finished successfully
      - `"failed"` - Execution failed or was aborted
    </ResponseField>
    
    <ResponseField name="created_at" type="string">
      ISO 8601 timestamp when the execution was created
    </ResponseField>
  </Expandable>
</ResponseField>

<ResponseField name="pagination" type="object">
  Pagination information for the response
  
  <Expandable title="Pagination Object">
    <ResponseField name="page" type="number">
      Current page number (always 1 for this endpoint)
    </ResponseField>
    
    <ResponseField name="page_size" type="number">
      Number of items per page
    </ResponseField>
    
    <ResponseField name="total_items" type="number">
      Total number of executions returned (may be less than or equal to page_size)
    </ResponseField>
    
    <ResponseField name="total_pages" type="number">
      Total number of pages (always 1 for this endpoint)
    </ResponseField>
    
    <ResponseField name="has_next" type="boolean">
      Whether there are more pages available (always false for this endpoint)
    </ResponseField>
    
    <ResponseField name="has_prev" type="boolean">
      Whether there are previous pages available (always false for this endpoint)
    </ResponseField>
  </Expandable>
</ResponseField>

<ResponseField name="meta" type="object">
  Metadata object (currently empty for this endpoint)
</ResponseField>

<RequestExample dropdown>

```powershell cURL
# Get all executions
curl -X GET "https://api.getcatalog.ai/v2/crawl" \
  -H "x-api-key: $CATALOG_API_KEY"

# Get only completed executions
curl -X GET "https://api.getcatalog.ai/v2/crawl?status=completed" \
  -H "x-api-key: $CATALOG_API_KEY"

# Get first 50 executions
curl -X GET "https://api.getcatalog.ai/v2/crawl?page_size=50" \
  -H "x-api-key: $CATALOG_API_KEY"
```

```javascript JavaScript
// Get all executions
const response = await fetch('https://api.getcatalog.ai/v2/crawl', {
  headers: {
    'x-api-key': 'YOUR_API_KEY'
  }
});

const data = await response.json();
console.log(`Found ${data.data.length} executions`);
```

```python Python
import requests

# Get all executions
response = requests.get(
    'https://api.getcatalog.ai/v2/crawl',
    headers={'x-api-key': 'YOUR_API_KEY'}
)

data = response.json()
print(f"Found {len(data['data'])} executions")
```

</RequestExample>

<ResponseExample>

```json Success Response
{
  "data": [
    {
      "execution_id": "crawl-skims-com-4ddfa1c9",
      "status": "processing",
      "created_at": "2026-01-09T23:45:35.570072+00:00"
    }
  ],
  "pagination": {
    "page": 1,
    "page_size": 20,
    "total_items": 1,
    "total_pages": 1,
    "has_next": false,
    "has_prev": false
  },
  "meta": {}
}
```

</ResponseExample>